--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 </head>
 <body class="bg-white font-montserrat">
     <!-- Navigation -->
-    <nav class="bg-white shadow-sm fixed w-full z-50">
+    <nav class="bg-white shadow-sm w-full z-[100] transition-all duration-300" id="mainNav">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-20">
                 <a href="/" class="flex items-center space-x-2 text-xl tracking-widest">
@@ -152,8 +152,8 @@
                     <a href="/contact.html" class="nav-link text-gray-600 hover:text-amber-800 transition-colors" data-i18n="navigation.contact">Contact</a>
                 </div>
                 <div class="flex items-center space-x-6">
-                    <!-- Language Selector -->
-                    <div class="language-selector text-gray-600">
+                    <!-- Language Selector - Hidden on mobile -->
+                    <div class="language-selector text-gray-600 hidden md:block">
                         <select id="languageSelector" class="text-gray-600 hover:text-amber-800 transition-colors">
                             <option value="en" data-i18n="languageSelector.en">English</option>
                             <option value="tr" data-i18n="languageSelector.tr">Turkish</option>
@@ -178,7 +178,7 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div id="mobileMenu" class="mobile-menu fixed inset-y-0 left-0 w-64 bg-white shadow-lg transform md:hidden">
+        <div id="mobileMenu" class="mobile-menu fixed inset-y-0 left-0 w-64 bg-white shadow-lg transform md:hidden z-[101]">
             <div class="p-6">
                 <button id="closeMenu" class="absolute top-4 right-4 text-gray-600 hover:text-amber-800" aria-label="Close menu">
                     <i class="fas fa-times text-xl"></i>
@@ -188,9 +188,9 @@
                     <a href="/shop.html" class="block text-gray-600 hover:text-amber-800 transition-colors" data-i18n="navigation.shop">Shop</a>
                     <a href="/about.html" class="block text-gray-600 hover:text-amber-800 transition-colors" data-i18n="navigation.about">About</a>
                     <a href="/contact.html" class="block text-gray-600 hover:text-amber-800 transition-colors" data-i18n="navigation.contact">Contact</a>
-                    <!-- Mobile Language Selector -->
-                    <div class="language-selector text-gray-600 mt-4">
-                        <select id="mobileLanguageSelector" class="text-gray-600 hover:text-amber-800 transition-colors">
+                    <!-- Mobile Language Selector - Only visible on mobile -->
+                    <div class="language-selector text-gray-600 mt-4 block md:hidden">
+                        <select id="mobileLanguageSelector" class="text-gray-600 hover:text-amber-800 transition-colors w-full">
                             <option value="en" data-i18n="languageSelector.en">English</option>
                             <option value="tr" data-i18n="languageSelector.tr">Turkish</option>
                         </select>
@@ -308,50 +308,6 @@
         </div>
     </footer>
 
-    <script>
-        // Mobile Menu Functionality
-        const mobileMenuBtn = document.getElementById('mobileMenuBtn');
-        const closeMenuBtn = document.getElementById('closeMenu');
-        const mobileMenu = document.getElementById('mobileMenu');
 
-        // Function to toggle menu
-        function toggleMenu(show) {
-            if (show) {
-                mobileMenu.classList.add('active');
-            } else {
-                mobileMenu.classList.remove('active');
-            }
-        }
-
-        mobileMenuBtn.addEventListener('click', () => {
-            toggleMenu(true);
-        });
-
-        closeMenuBtn.addEventListener('click', () => {
-            toggleMenu(false);
-        });
-
-        // Close menu when clicking outside
-        document.addEventListener('click', (e) => {
-            if (!mobileMenu.contains(e.target) && !mobileMenuBtn.contains(e.target)) {
-                toggleMenu(false);
-            }
-        });
-
-        // Add event listener for mobile language selector
-        document.addEventListener('DOMContentLoaded', () => {
-            const mobileLanguageSelector = document.getElementById('mobileLanguageSelector');
-            if (mobileLanguageSelector) {
-                mobileLanguageSelector.addEventListener('change', (e) => {
-                    window.i18n.switchLanguage(e.target.value);
-                    // Also update the desktop selector
-                    const desktopSelector = document.getElementById('languageSelector');
-                    if (desktopSelector) {
-                        desktopSelector.value = e.target.value;
-                    }
-                });
-            }
-        });
-    </script>
 </body>
 </html> 
