update header style

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         /* Language selector styles */
         .language-selector {
             position: relative;
-            display: inline-block;
+            /* display: inline-block; */
         }
         
         .language-selector select {
