--- a/index.html
+++ b/index.html
@@ -280,27 +280,27 @@
         </div>
     </section>
 
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-white py-12 md:py-16">
+     <!-- Footer -->
+     <footer class="bg-gray-900 text-white py-16">
         <div class="container mx-auto px-4">
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8 md:gap-12">
-                <div class="text-center md:text-left">
-                    <h3 class="text-lg md:text-xl font-cormorant font-bold mb-4 md:mb-6">Alda Perfume</h3>
-                    <p class="text-gray-400">Crafting your perfect scent story</p>
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-12">
+                <div>
+                    <h3 class="text-xl font-cormorant font-bold mb-6" data-i18n="footer.brand">Alda Perfume</h3>
+                    <p class="text-gray-400" data-i18n="footer.tagline">Crafting your perfect scent story</p>
                 </div>
-                <div class="text-center md:text-left">
-                    <h4 class="text-base md:text-lg font-cormorant font-bold mb-4 md:mb-6">Quick Links</h4>
-                    <ul class="space-y-3 md:space-y-4 text-gray-400">
-                        <li><a href="#" class="hover:text-white transition">Collections</a></li>
-                        <li><a href="#" class="hover:text-white transition">Find Your Scent</a></li>
-                        <li><a href="#" class="hover:text-white transition">About Us</a></li>
+                <div>
+                    <h4 class="text-lg font-cormorant font-bold mb-6" data-i18n="footer.quickLinks">Quick Links</h4>
+                    <ul class="space-y-4 text-gray-400">
+                        <li><a href="#" class="hover:text-white transition" data-i18n="footer.links.collections">Collections</a></li>
+                        <li><a href="#" class="hover:text-white transition" data-i18n="footer.links.findScent">Find Your Scent</a></li>
+                        <li><a href="#" class="hover:text-white transition" data-i18n="footer.links.about">About Us</a></li>
                     </ul>
                 </div>
-                <div class="text-center md:text-left">
-                    <h4 class="text-base md:text-lg font-cormorant font-bold mb-4 md:mb-6">Contact</h4>
-                    <ul class="space-y-3 md:space-y-4 text-gray-400">
-                        <li>Email: contact@aldaperfume.com</li>
-                        <li>Phone: +1 (555) 123-4567</li>
+                <div>
+                    <h4 class="text-lg font-cormorant font-bold mb-6" data-i18n="footer.contact">Contact</h4>
+                    <ul class="space-y-4 text-gray-400">
+                        <li><span data-i18n="footer.contactInfo.email">Email:</span> contact@aldaperfume.com</li>
+                        <li><span data-i18n="footer.contactInfo.phone">Phone:</span> +1 (555) 123-4567</li>
                     </ul>
                 </div>
             </div>
