modify pages for links

--- a/shop.html
+++ b/shop.html
@@ -288,13 +288,13 @@ color: var(--dark-text);
                     <button class="text-dark-text hover:text-primary-gold transition-colors" aria-label="Search">
                         <i class="fas fa-search text-xl"></i>
                     </button>
-                    <button class="text-dark-text hover:text-primary-gold transition-colors" aria-label="Account">
+                    <a class="text-dark-text hover:text-primary-gold transition-colors" aria-label="Account" href="/login.html">
                         <i class="fas fa-user text-xl"></i>
-                    </button>
-                    <button class="relative text-dark-text hover:text-primary-gold transition-colors" aria-label="Cart">
+                    </a>
+                    <a class="relative text-dark-text hover:text-primary-gold transition-colors" href="/cart.html" aria-label="Cart">
                         <i class="fas fa-shopping-bag text-xl"></i>
-                        <span class="absolute -top-2 -right-2 bg-primary-gold text-dark-bg text-xs rounded-full w-5 h-5 flex items-center justify-center">0</span>
-                    </button>
+                        <span class="absolute -top-2 -right-2 bg-primary-gold text-dark-bg text-xs rounded-full w-5 h-5 flex items-center justify-center">2</span>
+                    </a>
                     <!-- Mobile Menu Button -->
                     <button id="mobileMenuBtn" class="md:hidden text-dark-text hover:text-primary-gold transition-colors" aria-label="Menu">
                         <i class="fas fa-bars text-xl"></i>
