--- a/cart.html
+++ b/cart.html
@@ -86,7 +86,7 @@
             background: linear-gradient(135deg, var(--primary-gold) 0%, var(--primary-gold-light) 100%);
             color: var(--dark-bg);
             padding: 0.75rem 1.5rem;
-            border-radius: 0.375rem;
+            border-radius: 9999px;
             font-weight: 500;
             transition: all 0.3s ease;
         }
