change related products images

--- a/product.html
+++ b/product.html
@@ -826,7 +826,7 @@ color: var(--dark-text);
                 <!-- Related Product 1 -->
                 <div class="group">
                     <div class="relative overflow-hidden rounded-lg bg-white shadow-lg mb-4">
-                        <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?auto=format&fit=crop&w=600&q=80" 
+                        <img src="images/photo-1615634260167-c8cdede054de.jpg" 
                              alt="Related Product 1" 
                              class="w-full h-[300px] object-cover transform transition duration-700 group-hover:scale-105">
                         <div class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-md">
@@ -841,7 +841,7 @@ color: var(--dark-text);
                 <!-- Related Product 2 -->
                 <div class="group">
                     <div class="relative overflow-hidden rounded-lg bg-white shadow-lg mb-4">
-                        <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?auto=format&fit=crop&w=600&q=80" 
+                        <img src="images/photo-1615634260167-c8cdede054de.jpg" 
                              alt="Related Product 2" 
                              class="w-full h-[300px] object-cover transform transition duration-700 group-hover:scale-105">
                         <div class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-md">
@@ -856,7 +856,7 @@ color: var(--dark-text);
                 <!-- Related Product 3 -->
                 <div class="group">
                     <div class="relative overflow-hidden rounded-lg bg-white shadow-lg mb-4">
-                        <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?auto=format&fit=crop&w=600&q=80" 
+                        <img src="images/photo-1615634260167-c8cdede054de.jpg" 
                              alt="Related Product 3" 
                              class="w-full h-[300px] object-cover transform transition duration-700 group-hover:scale-105">
                         <div class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-md">
@@ -871,7 +871,7 @@ color: var(--dark-text);
                 <!-- Related Product 4 -->
                 <div class="group">
                     <div class="relative overflow-hidden rounded-lg bg-white shadow-lg mb-4">
-                        <img src="https://images.unsplash.com/photo-1615634260167-c8cdede054de?auto=format&fit=crop&w=600&q=80" 
+                        <img src="images/photo-1615634260167-c8cdede054de.jpg" 
                              alt="Related Product 4" 
                              class="w-full h-[300px] object-cover transform transition duration-700 group-hover:scale-105">
                         <div class="absolute top-4 right-4 bg-white rounded-full p-2 shadow-md">
