--- a/product.html
+++ b/product.html
@@ -342,8 +342,60 @@ color: var(--dark-text);
                         This enchanting fragrance opens with fresh citrus notes, evolves into a heart of exotic florals, and 
                         settles into a warm, woody base that lingers throughout the night.
                     </p>
-                    <div class="flex items-center space-x-4 mb-6">
-                        <input type="number" value="1" min="1" class="quantity-input w-20">
+                       <div class="space-y-6">
+                        <div>
+                            <h3 class="text-lg font-semibold mb-3">Key Notes</h3>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="tag">Jasmine</span>
+                                <span class="tag">Vanilla Orchid</span>
+                                <span class="tag">Amber</span>
+                                <span class="tag">Bergamot</span>
+                                <span class="tag">Sandalwood</span>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="text-lg font-semibold mb-3">Perfect For</h3>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="tag">Evening Wear</span>
+                                <span class="tag">Special Occasions</span>
+                                <span class="tag">Romantic Dates</span>
+                            </div>
+                        </div>
+
+                        <div>
+                            <h3 class="text-lg font-semibold mb-3">Best Seasons</h3>
+                            <div class="flex flex-wrap gap-2">
+                                <span class="tag">Fall</span>
+                                <span class="tag">Winter</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="space-y-6 pt-6">
+                        <div class="flex items-center space-x-4">
+                            <label class="text-gray-700 font-semibold">Size:</label>
+                            <div class="flex space-x-2">
+                                <button class="px-4 py-2 border-2 border-amber-800 text-amber-800 rounded-full hover:bg-amber-800 hover:text-white transition">30ml</button>
+                                <button class="px-4 py-2 border-2 border-gray-300 rounded-full hover:border-amber-800 hover:text-amber-800 transition">50ml</button>
+                                <button class="px-4 py-2 border-2 border-gray-300 rounded-full hover:border-amber-800 hover:text-amber-800 transition">100ml</button>
+                            </div>
+                        </div>
+
+                        <div class="flex items-center space-x-4">
+                            <label class="text-gray-700 font-semibold">Quantity:</label>
+                            <div class="flex items-center border-2 border-gray-300 rounded-full">
+                                <button class="px-4 py-2 text-gray-600 hover:text-amber-800 transition">-</button>
+                                <span class="px-4 border-x-2 border-gray-300">1</span>
+                                <button class="px-4 py-2 text-gray-600 hover:text-amber-800 transition">+</button>
+                            </div>
+                        </div>
+
+                       
+                    </div>
+
+                    <div class="flex items-center space-x-4 my-6">
+                        
                         <button class="btn-primary flex-1">Add to Cart</button>
                     </div>
                     <div class="space-y-4">
