Add checkout page and update cart button functionality

--- a/cart.html
+++ b/cart.html
@@ -316,7 +316,7 @@ color: var(--dark-text);
                         <span>$241.98</span>
                     </div>
                 </div>
-                <button class="w-full btn-checkout py-3 rounded-full" data-i18n="cart.checkout">Proceed to Checkout</button>
+                <button class="w-full btn-checkout py-3 rounded-full" data-i18n="cart.checkout" onclick="window.location.href='checkout.html'">Proceed to Checkout</button>
             </div>
         </div>
     </main>
